# double-trouble

./: Cargo.toml  Dockerfile
.github/workflows/: deploy.yml
src/: main.rs  settings.rs
src/asset_selection/: mod.rs
src/data_download/: adjustments.rs  dividends.rs  mod.rs  prices.rs  splits.rs
src/trading/: data.rs  domain.rs  mod.rs  relay.rs  trade_generator.rs
