[package]
name = "double-trouble"
version = "0.1.0"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bdays = "0.1.2"
chrono = "0.4.19"
futures = "0.3.15"
iex = { git = "ssh://git@github.com/Overmuse/iex", tag = "v0.1.1" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.10.1" }
reqwest = "0.11.3"
rust_decimal = "1.14.1"
serde_json = "1.0.64"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"] }
