[package]
name = "double-trouble"
version = "0.1.1"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bdays = "0.1.2"
chrono = "0.4.19"
config = "0.11.0"
csv = "1.1.6"
dotenv = "0.15.0"
futures = "0.3.15"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.3.1" }
iex = { git = "ssh://git@github.com/Overmuse/iex", tag = "v0.1.1" }
multimap = "0.8.3"
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.10.1" }
position-intents = { git = "ssh://git@github.com/Overmuse/position-intents", tag = "v0.5.0" }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
reqwest = "0.11.3"
rust_decimal = { version = "1.14.1", features = ["maths"] }
serde = "1.0.126"
serde_json = "1.0.64"
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.18"
uuid = {version = "0.8.2", features = ["v4"] }
