[package]
name = "double-trouble"
version = "0.4.4"
authors = ["Sebastian Rollen <seb@overmu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bdays = "0.1"
chrono = "0.4"
config = "0.11"
csv = "1.1"
dotenv = "0.15"
futures = "0.3"
kafka-settings = { git = "ssh://git@github.com/Overmuse/kafka-settings", tag = "v0.3.3" }
iex = { git = "ssh://git@github.com/Overmuse/iex", tag = "v0.2.0" }
polygon = { git = "ssh://git@github.com/Overmuse/polygon", tag = "v0.10.1" }
rdkafka = { version = "0.26", features = ["ssl-vendored"] }
reqwest = "0.11"
rust_decimal = { version = "1.14", features = ["maths"] }
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trading-base = { git = "ssh://git@github.com/Overmuse/trading-base", tag = "v0.2.0" }
uuid = {version = "0.8", features = ["v4"] }
